--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       </header>
 
-        <nav class="navbar navbar-expand-lg bg-light" id="page-3">
+        <nav class="navbar navbar-expand-lg bg-light container" id="page-3">
             <div class="container-fluid">
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div id="nav-list" class="d-flex flex-row">
